samples/_failures_safe/1761263910_b5aee9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9ee26c1.c: In function ‘main’:
./samples/SAFE/__tmp_d9ee26c1.c:147:5: error: expected expression at end of input
  147 |     if (input_len > 0 && input[input_len-
      |     ^~
./samples/SAFE/__tmp_d9ee26c1.c:147:5: error: expected declaration or statement at end of input
